src/test/deca/context/invalid/created/rule3.25/nobool.deca
// Résultat erreur:
//    16:15
//    Condition non booléenne dans 'While' (règle 3.25)
//
// Description:
//    Tests de programme incorrect contextuellement (condition 'While' non booléenne)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    void maMethode() {
        int x = 5;
        while (x) { 
           
        }
    }
}
